wooo added some text!

--- a/index.html
+++ b/index.html
@@ -21,7 +21,17 @@
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>Story</h1>
-							<p class="major">A (modular, highly tweakable) responsive one-page template designed by <a href="https://html5up.net">HTML5 UP</a> and released for free under the <a href="https://html5up.net/license">Creative Commons</a>.</p>
+							<p class="major">The mathematical constant tau, or ti, is defined as the ratio of a circle’s circumference to its diameter. It is equal to pi divided by four, or approximately 0.7854. While pi is a commonly used constant in mathematics and science, tau is often considered to be a more useful constant in everyday life due to its simplicity and ease of understanding.
+
+One of the main advantages of tau over pi is its simplicity. Tau is equal to two times pi, which means that when using tau, we do not have to divide or multiply by two in order to calculate the circumference of a circle. This makes calculations much easier and quicker, especially for those who are not well-versed in mathematics. Additionally, tau is a constant that is easy to remember, as it is approximately equal to 0.7854, which is a number that can be easily memorized.
+
+Another advantage of tau is its ease of understanding. Pi is often considered to be a difficult constant to understand, as it is an irrational number that cannot be expressed as a finite decimal. On the other hand, tau is much easier to understand, as it represents the ratio of a circle’s circumference to its diameter, which is a simple and intuitive concept. This makes tau more accessible to a wider audience, including children and those who may not have a strong background in mathematics.
+
+In addition to its simplicity and ease of understanding, tau is also more versatile than pi. This is because tau can be used to calculate the circumference of a circle more accurately and efficiently than pi. For example, when using tau, we can calculate the circumference of a circle with greater accuracy, as tau takes into account the entire circumference of the circle, rather than just a portion of it. This makes tau a more versatile constant that can be used in a wider range of calculations and applications.
+
+In conclusion, tau is a better constant than pi in everyday life due to its simplicity, ease of understanding, and versatility. While pi is a commonly used constant in mathematics and science, tau is a more user-friendly constant that is easier to remember and use. Additionally, tau is a constant that can be used to calculate the circumference of a circle more accurately and efficiently, making it a more versatile constant that can be applied in a wider range of applications.
+								
+								A (modular, highly tweakable) responsive one-page template designed by <a href="https://html5up.net">HTML5 UP</a> and released for free under the <a href="https://html5up.net/license">Creative Commons</a>.</p>
 							<ul class="actions stacked">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">Get Started</a></li>
 							</ul>
