--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- One -->
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
-							<h1>Story</h1>
+							<h1>Why TI is better than PI!</h1>
 							<p class="major">The mathematical constant tau, or ti, is defined as the ratio of a circle’s circumference to its diameter. It is equal to pi divided by four, or approximately 0.7854. While pi is a commonly used constant in mathematics and science, tau is often considered to be a more useful constant in everyday life due to its simplicity and ease of understanding.
 
 One of the main advantages of tau over pi is its simplicity. Tau is equal to two times pi, which means that when using tau, we do not have to divide or multiply by two in order to calculate the circumference of a circle. This makes calculations much easier and quicker, especially for those who are not well-versed in mathematics. Additionally, tau is a constant that is easy to remember, as it is approximately equal to 0.7854, which is a number that can be easily memorized.
